Fix overflow

--- a/src/app/components/HeaderMenu/Sidebar/Sidebar.module.css
+++ b/src/app/components/HeaderMenu/Sidebar/Sidebar.module.css
@@ -36,6 +36,10 @@
   font-size: 1rem;
   color: var(--white);
   margin-left: 16px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 176px;
 }
 /*   height: calc(100% - .brand Height); */
 .linksContainer {
